fixed errors on mobile

--- a/components/About/About.module.scss
+++ b/components/About/About.module.scss
@@ -12,7 +12,7 @@
             position: relative;
             font-size: 80px;
             text-shadow: 6px 6px 0 black;
-            letter-spacing: 5px;
+            letter-spacing: 4px;
             color: white;
             margin: 0 0 24px;
 
