--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -105,6 +105,7 @@
         &_anchor {
             transition: all 0.1s ease-in-out;
             border-radius: 100%;
+            color: black;
             background-color: cadetblue;
             padding: 8px;
 
