--- a/components/Repos/Repos.module.scss
+++ b/components/Repos/Repos.module.scss
@@ -12,6 +12,7 @@
     align-items: center;
     height: 50vh;
     font-size: 22px;
+    margin: 0 32px;
 }
 
 .repoColumns {
